--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # Site wide configuration
 ####################################
 #
-title: zhujiajun
-email: zhujiajun.me@gmail.com
-description: zhujiajun's blog,powered by jekyll.
-url: https://zjiajun.github.io # the base hostname & protocol for your site
+title: wangshiyuo
+email: wangshiyuo@foxmail.com
+description: wangshiyuo's blog,powered by jekyll.
+url: https://wangshiyuo.github.io # the base hostname & protocol for your site
 keywords: ["jekyll", "java", "scala","blog"]
 
 #
@@ -37,11 +37,11 @@ plugins:
 ####################################
 #
 owner:
-  name: zhujiajun
+  name: wangshiyuo
   avatar: avatar.jpg
-  job: "Java & Scala Developer"
-  bio: "A backend developer who loves design awesome things. Working for Dianping at in Shanghai, China."
-  email: zhujiajun.me@gmail.com
+  job: "程序猿"
+  bio: "努力搬砖的打工仔。"
+  email: wangshiyuo@foxmial.com
   disqus-shortname: #username
   twitter:  #username
   facebook: #username
@@ -52,7 +52,7 @@ owner:
     ad-client:
     ad-slot:
   bing-verify:
-  github: zjiajun #username
+  github: wangshiyuo #username
   stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
   linkedin: #username
   xing: #username
